control panel commented

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                         <button class="btn btn-secondary">Join Audience</button>
                     </div>
 
-                    <div class="role-card" onclick="joinAs('control')">
+                    <!-- Admin Control Card - Commented out for POC -->
+                    <!-- <div class="role-card" onclick="joinAs('control')">
                         <div class="card-icon control-icon">
                             <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <circle cx="12" cy="12" r="3"/>
@@ -84,7 +85,7 @@
                             <li>Session monitoring</li>
                         </ul>
                         <button class="btn btn-control">Access Control Panel</button>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="room-input-section">
